<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/menu_manage_admin" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_manage_member" />
        <item
            android:id="@+id/nav_manage_items"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/menu_manage_items" />
        <item
            android:id="@+id/nav_view_details"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_manage_orders" />

        <item
            android:id="@+id/nav_view_items"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/menu_view_items" />

        <item
            android:id="@+id/nav_map_navigation"
            android:icon="@drawable/ic_baseline_directions_24"
            android:title="@string/menu_view_navigation" />
    </group>
</menu>